--- a/custom.css
+++ b/custom.css
@@ -1,45 +1,43 @@
-/* Navbar container */
+
 .navbar {
     overflow: hidden;
-    background-color: white;
     font-family: Arial;
   }
   
-  /* Links inside the navbar */
+
   .navbar a {
     float: right;
     font-size: 16px;
-    color: grey;
+    color: black;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
   }
   
-  /* The dropdown container */
+
   .dropdown {
     float: right;
     overflow: hidden;
   }
   
-  /* Dropdown button */
+
   .dropdown .dropbtn {
     font-size: 16px;
     border: none;
     outline: none;
-    color: grey;
+    color: black;
     padding: 14px 16px;
     background-color: inherit;
-    font-family: inherit; /* Important for vertical align on mobile phones */
-    margin: 0; /* Important for vertical align on mobile phones */
+    font-family: inherit; 
+    margin: 0; 
   }
   
-  /* Add a red background color to navbar links on hover */
   .navbar a:hover, .dropdown:hover .dropbtn {
     background-color: white;
     color: black;
   }
   
-  /* Dropdown content (hidden by default) */
+ 
   .dropdown-content {
     display: none;
     position: absolute;
@@ -49,7 +47,7 @@
     z-index: 1;
   }
   
-  /* Links inside the dropdown */
+
   .dropdown-content a {
     float: none;
     color: black;
@@ -59,31 +57,31 @@
     text-align: left;
   }
   
-  /* Add a grey background color to dropdown links on hover */
+ 
   .dropdown-content a:hover {
     background-color: #ddd;
   }
   
-  /* Show the dropdown menu on hover */
+
   .dropdown:hover .dropdown-content {
     display: block;
   }
 
   * {box-sizing:border-box}
 
-/* Slideshow container */
+
 .slideshow-container {
   max-width: 1000px;
   position: relative;
   margin: auto;
 }
 
-/* Hide the images by default */
+
 .mySlides {
   display: none;
 }
 
-/* Next & previous buttons */
+
 .prev, .next {
   cursor: pointer;
   position: absolute;
@@ -99,18 +97,18 @@
   user-select: none;
 }
 
-/* Position the "next button" to the right */
+
 .next {
   right: 0;
   border-radius: 3px 0 0 3px;
 }
 
-/* On hover, add a black background color with a little bit see-through */
+
 .prev:hover, .next:hover {
   background-color: rgba(0,0,0,0.8);
 }
 
-/* Caption text */
+
 .text {
   color: black;
   font-size: 20px;
@@ -122,7 +120,7 @@
   font-weight: bold;
 }
 
-/* Number text (1/3 etc) */
+
 .numbertext {
   color: #f2f2f2;
   font-size: 12px;
@@ -131,7 +129,7 @@
   top: 0;
 }
 
-/* The dots/bullets/indicators */
+
 .dot {
   cursor: pointer;
   height: 15px;
@@ -147,7 +145,7 @@
   background-color: #717171;
 }
 
-/* Fading animation */
+
 .fade {
   animation-name: fade;
   animation-duration: 1.5s;
@@ -174,7 +172,6 @@ p{
 .container {
   max-width: 1200px;
   margin: auto;
-  background: white;
   overflow: auto;
   padding-left: 150px;
 }
