--- a/custom.css
+++ b/custom.css
@@ -1,4 +1,10 @@
 
+.logo{
+  height: 35px;
+  padding-top: 0px;
+  padding-left: 50px;
+}
+
 .navbar {
     overflow: hidden;
     font-family: Arial;
