--- a/custom.css
+++ b/custom.css
@@ -5,14 +5,15 @@
   padding-left: 20px;
 }
 
-.navbar {
-    overflow: hidden;
-    font-family: Arial;
-    flex: 0%;
-  }
-  
+#navbar {
+  background-color: white;
+  font-family: Arial;
+  position: fixed; top: 0; left:0; right: 0;
+  float: left;
+  display: block;
+}
 
-  .navbar a {
+  #navbar a {
     float: right;
     font-size: 16px;
     color: black;
@@ -22,13 +23,13 @@
   }
   
 
-  .dropdown {
+  #dropdown {
     float: right;
     overflow: hidden;
   }
   
 
-  .dropdown .dropbtn {
+  #dropdown #dropbtn {
     font-size: 16px;
     border: none;
     outline: none;
@@ -39,13 +40,13 @@
     margin: 0; 
   }
   
-  .navbar a:hover, .dropdown:hover .dropbtn {
+  #navbar a:hover, #dropdown:hover #dropbtn {
     background-color: white;
     color: black;
   }
   
  
-  .dropdown-content {
+  #dropdown-content {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
@@ -55,7 +56,7 @@
   }
   
 
-  .dropdown-content a {
+  #dropdown-content a {
     float: none;
     color: black;
     padding: 12px 16px;
@@ -65,12 +66,12 @@
   }
   
  
-  .dropdown-content a:hover {
+  #dropdown-content a:hover {
     background-color: #ddd;
   }
   
 
-  .dropdown:hover .dropdown-content {
+  #dropdown:hover #dropdown-content {
     display: block;
   }
 
@@ -79,8 +80,9 @@
 
 .slideshow-container {
   max-width: 1000px;
-  position: relative;
   margin: auto;
+  margin-top: 50px;
+
 }
 
 
@@ -89,21 +91,11 @@
 }
 
 
-.text {
-  color: black;
-  font-size: 20px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-  font-weight: bold;
-}
-
 
 h1 {
   text-align: center;
   color: rgb(177, 112, 15);
+  padding-top: 20px;
 }
 
 .intro {
@@ -112,15 +104,11 @@ h1 {
   padding-right: 150px;
   font-size: 15px;
   text-indent: 50px;
-<<<<<<< HEAD
-  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-=======
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
->>>>>>> 7109ba00b7d0e6fc1d9075df5f7883af3636228d
 }
 
 hr {
-  width: 80%;
+  width: 100%;
 }
 .container {
   max-width: 1350px;
@@ -197,5 +185,27 @@ overflow: auto;
   width: 300px;
   text-align: justify;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+#fit {
+  width: 55%;
+  height: 600px;
+  padding-left: 130px;
+  margin-top: 0;
+  padding-top: 0;
+  padding-bottom: 30px;
+}
+
+#tagline {
+  padding-top: 100px;
+  padding-right: 200px;
+  text-align: justify;
+  padding-bottom: 200px;
+}
+
+#mytext {
+  padding-left: 200px;
+  padding-right: 150px;
+  text-align: center;
 }
 
