--- a/webpages/custom.css
+++ b/webpages/custom.css
@@ -41,7 +41,7 @@
   }
   
   #navbar a:hover, #dropdown:hover #dropbtn {
-    background-color: white;
+    background-color: lightgray;
     color: black;
   }
   
