--- a/webpages/healthy-food.css
+++ b/webpages/healthy-food.css
@@ -40,7 +40,7 @@
   }
   
   #navbar a:hover, #dropdown:hover #dropbtn {
-    background-color: white;
+    background-color: lightgray;
     color: black;
   }
   
