--- a/webpages/formstyle.css
+++ b/webpages/formstyle.css
@@ -94,5 +94,6 @@ input[type=submit] {
   }
   
   input[type=submit]:hover {
-    background-color: rgba(231, 163, 60, 0.37);
+    background-color: black;
+    color: white;
   }
